--- a/2. Practice time - part 1/06. Calculator challenge/index.html
+++ b/2. Practice time - part 1/06. Calculator challenge/index.html
@@ -6,12 +6,13 @@
         <span id="num1-el"></span>
         <span id="num2-el"></span>
         <br>
-        <button>Add</button>
-        <button>Subtract</button>
-        <button>Divide</button>
-        <button>Multiply</button>
+        <button id="add-btn" onclick="add()">Add</button>
+        <button id="subtract-btn" onclick="subtract()">Subtract</button>
+        <button id="divide-btn" onclick="divide()">Divide</button>
+        <button id="multply-btn" onclick="multiply()">Multiply</button>
+        <button id="clear-btn" onclick="clearResult()">Clear</button>
         <br>
-        <span id="sum-el">Sum: </span>
+        <span id="result-el">Result: </span>
         <script src="index.js"></script>
     </body>
 </html>
