--- a/4. Practice time - part 2/07. Sorting fruits/index.html
+++ b/4. Practice time - part 2/07. Sorting fruits/index.html
@@ -1,10 +1,17 @@
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div id="apple-shelf"></div>  
-        <div id="orange-shelf"></div>
-        <script src="index.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div id="apple-shelf"></div>  
+    <div id="orange-shelf"></div>
+    <button onclick="sortFruit()">Sort</button>
+    <script src="index.js"></script>
+</body>
 </html>
